# openhri_ros

./: CMakeLists.txt  README.md  package.xml  setup.py
contrib/julius_server/: Julius_Linux.ini  Julius_Windows.ini  README.md  comm.py  julius_wrap.py  server.py  silence.py
contrib/julius_server/jconf/: dictation-dnn.jconf  run-win-dnn-module.bat  wrap.jconf
contrib/julius_server/ssl/: gen_ssl_files.sh
etc/: google_speech.conf  google_tts.conf  julius.conf
examples/: sample-en.grxml  sample-include.grxml
launch/: google_asr.launch  google_tts.launch  julius.launch  julius_cli.launch  openjtalk.launch
scripts/: GoogleSpeechRecog.py  GoogleTextToSpeech.py  JuliusCli.py  JuliusRos.py  OpenJTalk.py
src/openhri/: CloudSpeechRecogBase.py  VoiceSynthComponentBase.py  __init__.py  core.py  julius_cli.py  manager.py  parseopenjtalk.py  utils.py
src/openhri/google_asr/: config.py
src/openhri/google_tts/: config.py
src/openhri/julius/: __init__.py  config.py  hiragana2phoneme.py  ipa2sampa.py  katakana2hiragana.py  lexicondb.py  parsejuliusdict.py  parsesrgs.py  parsevoxforgedict.py
src/openhri/openjtalk/: config.py
